tests/failure/enum-duplicate-type-unnamed.stderr
error[E0308]: mismatched types
  --> tests/failure/enum-duplicate-type-unnamed.rs:10:24
   |
10 |     let _: T = T::from(1);
   |                ------- ^ expected `T`, found integer
   |                |
   |                arguments to this function are incorrect
   |
note: associated function defined here
  --> $RUST/core/src/convert/mod.rs
   |
   |     fn from(value: T) -> Self;
   |        ^^^^
help: try wrapping the expression in a variant of `T`
    |
10  |     let _: T = T::from(T::A(1));
    |                        +++++ +
10  |     let _: T = T::from(T::B(1));
    |                        +++++ +
